[package]
name = "dsfs-rust"
version = "0.1.0"
authors = ["Tynan Daly <tynan.s.daly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[http]
proxy = "http://devproxy.utc.com:80"

[https]
proxy = "http://devproxy.utc.com:80"

[dependencies]
num = "*"